<resources>
    <string name="app_name">wlc</string>
    <string name="exit_application_click_once_again">再按一次退出程序</string>
    <string name="loading_net">请求中···</string>
    <string name="more">更多</string>
    <string name="back">返回</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="login_name">登录账号</string>
    <string name="login_phone">手机号码</string>
    <string name="login_code">手机验证码</string>
    <string name="login_new_pass">输入新密码</string>
    <string name="login_new_pass_again">重复密码</string>
    <string name="forgot">忘记密码</string>
    <string name="donation_program">捐赠项目:</string>
    <string name="donation_money">捐赠金额</string>
    <string name="donation_money_notice">捐赠金额，单位:元</string>
    <string name="donation_account">捐赠人账号</string>
    <string name="donation_account_notice">捐赠人的登录账号</string>
    <string name="donation_person">捐赠人</string>
    <string name="donation_name_notice">捐赠人姓名，非必填</string>
    <string name="mark">备注</string>
    <string name="donation_mark_notice">捐赠备注，最多200字，非必填</string>
    <string name="pay_method">支付方式</string>
    <string name="submit">提 交</string>
    <string name="login_out">退出登录</string>
    <string name="store_management">门店管理</string>
    <string name="inputting_appointment_call">输入预约电话</string>
    <string name="search">查询</string>
    <string name="reservation_details">预约详情</string>
    <string name="reservation">预约中</string>
    <string name="reservation_product">预约产品:</string>
    <string name="not_store">未到店</string>
    <string name="confirm_store">确认到店</string>
    <string name="refuse_store">拒绝预约</string>
    <string name="refuse_reservation">拒绝预约</string>
    <string name="accept_reservation">接受预约</string>
    <string name="guest_point_list">助客点单</string>
    <string name="modify_phone">修改手机号</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="modify_phone_num">修改手机号</string>
    <string name="new_phone_num">新手机号</string>
    <string name="new_phone_num_notice">你的新手机号</string>
    <string name="verification_code">验证码</string>
    <string name="verification_code_get">获取验证码</string>
    <string name="six_sms_verification_code">6位短信验证码</string>
    <string name="login_pwd">登录密码</string>
    <string name="your_login_pwd">你的登录密码</string>
    <string name="new_login_pwd">新登录密码</string>
    <string name="password_notice">字母、数字、6–16个字符</string>
    <string name="duplicate_password">重复密码</string>
    <string name="duplicate_password_notice">再次输入新登录密码</string>
    <string name="old_login_pwd">旧登录密码</string>
    <string name="your_old_login_pwd">你的旧登录密码</string>
    <string name="new_goods">新增商品</string>
    <string name="product_detail">商品详情</string>
    <string name="product_name">商品名字</string>
    <string name="product_name_notice">2–32个字</string>
    <string name="product_price">商品售价</string>
    <string name="product_price_notice">商品售价，单位：元</string>
    <string name="commodity_classification">商品分类</string>
    <string name="selection_category">选择类别</string>
    <string name="commodity_stock">商品库存</string>
    <string name="commodity_picture">商品图片</string>
    <string name="selection_commodity_picture">选择商品图片</string>
    <string name="detail_picture">详情图片</string>
    <string name="cancle">取消</string>
    <string name="selected_products">已选产品</string>
    <string name="minus_sign">-</string>
    <string name="plus">+</string>
    <string name="wlc">维链场</string>
    <string name="immediate_update">立即更新</string>
    <string name="update_app_immediately">立即升级</string>
    <string name="update_app_later">稍后升级</string>
    <string name="update_app_loading">正在升级，请稍后</string>
    <string name="update_notice">升级提示</string>
    <string name="charitable_donation">慈善捐赠</string>
    <string name="commodity_management">商品管理</string>
    <string name="headquarters_order">总部订单</string>
    <string name="system_notice">系统公告</string>
    <string name="regional_management">区域管理</string>
    <string name="shop_assistant_management">店员管理</string>
    <string name="person_info">个人信息</string>
    <string name="custom_product">定制产品</string>
    <string name="high_grade_products">高档产品</string>
    <string name="common_product">普通产品</string>
    <string name="fast_food_area">快餐区</string>
    <string name="wine">酒水</string>
    <string name="gift_area">赠送区</string>
    <string name="charitable_donation_english">CHARITABLE DONATION</string>
    <string name="customer_reservation">客户预约</string>
    <string name="customer_reservation_english">CUSTOMER RESERVATION</string>
    <string name="guest_order">客人订单</string>
    <string name="guest_order_english">GUEST ORDER</string>
    <string name="guest_list">助客点单</string>
    <string name="guest_list_english">ORDER THE GUEST</string>
    <string name="notice_title">【公告】</string>
    <string name="charitable_donation_info">捐赠信息</string>
    <string name="time_to_store">到店时间:</string>
    <string name="store_number">到店人数：</string>
    <string name="contacts">联系人:</string>
    <string name="contact_number">联系电话:</string>
    <string name="reservation_area">预约区域:</string>
</resources>
