<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <com.qmkj.wlc.ui.view.refreshlayout.XRefreshLayout
        android:id="@+id/charitable_donation_xrl"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:focusable="true">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/charitable_donation_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none"/>
    </com.qmkj.wlc.ui.view.refreshlayout.XRefreshLayout>

    <View
        android:layout_width="@dimen/y1"
        android:layout_height="match_parent"
        android:background="@color/textGray"/>

    <ScrollView
        android:id="@+id/charitable_donation_sl"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white_1"
            android:orientation="vertical"
            android:paddingEnd="@dimen/x24"
            android:paddingStart="@dimen/x24">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y16"
                android:layout_marginTop="@dimen/y16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/charitable_donation"
                    android:textColor="@color/color_black_7"
                    android:textSize="@dimen/text_size_18"/>

                <ImageView
                    android:layout_width="@dimen/x24"
                    android:layout_height="@dimen/y24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/detele"/>
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/y1"
                android:background="@color/textGray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y21"
                android:text="@string/charitable_donation_info"
                android:textColor="@color/color_black_8"
                android:textSize="@dimen/text_size_20"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y44"
                android:layout_marginTop="@dimen/y12"
                android:background="@drawable/shape_edit"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/x16"
                android:paddingStart="@dimen/x16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/donation_program"
                    android:textSize="@dimen/text_size_14"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/y150"
                    android:text="[类别]项目名称"
                    android:textColor="@color/color_black_7"
                    android:textSize="@dimen/text_size_14"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y44"
                android:layout_marginTop="@dimen/y10"
                android:background="@drawable/shape_edit"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/x16"
                android:paddingStart="@dimen/x16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/donation_money"
                    android:textSize="@dimen/text_size_14"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/x10"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="end"
                    android:hint="@string/donation_money_notice"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_14"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y44"
                android:layout_marginTop="@dimen/y10"
                android:background="@drawable/shape_edit"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/x16"
                android:paddingStart="@dimen/x16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/donation_account"
                    android:textSize="@dimen/text_size_14"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/x10"
                    android:background="@null"
                    android:gravity="end"
                    android:hint="@string/donation_account_notice"
                    android:maxLines="1"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_14"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y44"
                android:layout_marginTop="@dimen/y10"
                android:background="@drawable/shape_edit"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/x16"
                android:paddingStart="@dimen/x16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/donation_person"
                    android:textSize="@dimen/text_size_14"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/x10"
                    android:background="@null"
                    android:gravity="end"
                    android:hint="@string/donation_name_notice"
                    android:maxLines="1"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_14"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y98"
                android:layout_marginTop="@dimen/y10"
                android:background="@drawable/shape_edit"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/x16"
                android:paddingStart="@dimen/x16">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y98"
                    android:layout_marginTop="@dimen/y13"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/donation_mark_notice"
                    android:maxLines="4"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_14"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y28"
                android:text="@string/pay_method"
                android:textColor="@color/color_black_8"
                android:textSize="@dimen/text_size_20"/>

            <com.qmkj.wlc.ui.view.FullGridView
                android:id="@+id/pay_method_gv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y12"
                android:background="@color/color_white_1"
                android:clickable="false"
                android:listSelector="@android:color/transparent"
                android:numColumns="5"
                android:horizontalSpacing="@dimen/y10"
                android:scrollbars="horizontal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/submit_bt"
                style="@style/btn_blue"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/y44"
                android:layout_marginTop="@dimen/y100"
                android:text="@string/submit"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>