<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y172"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:id="@+id/update_app_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y10"
            android:includeFontPadding="false"
            android:text="@string/update_notice"
            android:textSize="@dimen/text_size_18"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x15"
            android:layout_marginStart="@dimen/x15"
            android:layout_marginTop="@dimen/y20"
            android:includeFontPadding="false"
            android:text="999qjsndknjaadnakndkas"
            android:textSize="@dimen/text_size_14"/>

        <ProgressBar
            android:id="@+id/update_prg_bar"
            style="@style/progressBarHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x15"
            android:layout_marginStart="@dimen/x15"
            android:layout_marginTop="@dimen/y26"
            android:max="100"
            android:maxHeight="@dimen/y3"
            android:minHeight="@dimen/y3"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/update_bt_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/update_immediately_bt"
                style="@style/btn_blue"
                android:layout_marginEnd="@dimen/x15"
                android:layout_marginStart="@dimen/x15"
                android:layout_marginTop="@dimen/y26"
                android:text="@string/update_app_immediately"/>

            <Button
                android:id="@+id/update_later_bt"
                style="@style/btn_blue"
                android:layout_marginBottom="@dimen/y15"
                android:layout_marginEnd="@dimen/x15"
                android:layout_marginStart="@dimen/x15"
                android:layout_marginTop="@dimen/y15"
                android:background="@null"
                android:includeFontPadding="false"
                android:text="@string/update_app_later"/>
        </LinearLayout>

        <TextView
            android:id="@+id/update_loading_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/y10"
            android:layout_marginTop="@dimen/y15"
            android:text="@string/update_app_loading"
            android:textSize="@dimen/text_size_14"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>