<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x108"
    android:layout_height="match_parent"
    android:background="@color/color_black_4"
    android:orientation="vertical"
    android:paddingTop="@dimen/y20">

    <LinearLayout
        android:id="@+id/charitable_donation_left_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/charitable_donation_left_iv"
            android:layout_width="@dimen/x64"
            android:layout_height="@dimen/y64"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/charitable_donation_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charitable_donation"
            android:textColor="@color/color_bule_1"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/customer_reservation_left_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/y20">

        <ImageView
            android:id="@+id/customer_reservation_left_iv"
            android:layout_width="@dimen/x64"
            android:layout_height="@dimen/y64"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/customer_reservation_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_reservation"
            android:textColor="@color/color_bule_1"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/guest_order_left_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/y20">

        <ImageView
            android:id="@+id/guest_order_left_iv"
            android:layout_width="@dimen/x64"
            android:layout_height="@dimen/y64"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/guest_order_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_order"
            android:textColor="@color/color_bule_1"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/guest_list_left_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/y20">

        <ImageView
            android:id="@+id/guest_list_left_iv"
            android:layout_width="@dimen/x64"
            android:layout_height="@dimen/y64"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/guest_list_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_list"
            android:textColor="@color/color_bule_1"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="@dimen/x72"
        android:layout_height="@dimen/y40"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/y32"
        android:src="@mipmap/login_icon"/>
</LinearLayout>